# rmd

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: cli_basic.rs
