[package]
name = "srmd"
version = "0.1.0"
authors = ["Angelo Laub <angelolaub@gmail.com>"]
edition = "2021"
description = "A small command line utility to safely delete a directory as a safer alternative to `rm -rf`."
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
